k8s/openhab/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openhab
  labels:
    name: openhab
