k8s/openhab/03-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: openhab
  namespace: openhab
spec:
  rules:
  - host: openhab.home.goodhouse.io
    http:
      paths:
      - path: /
        backend:
          serviceName: openhab
          servicePort: 80
